--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.18.2",
+    "crypto-js": "^3.1.9-1",
     "express": "^4.16.2",
+    "jsonwebtoken": "^8.2.2",
     "lodash": "^4.17.10",
     "mongodb": "^2.2.33",
-    "mongoose": "^4.13.6"
+    "mongoose": "^4.13.6",
+    "validator": "^10.2.0"
   },
   "devDependencies": {
     "expect": "^22.4.3",
